src/rules/snapshots/darklua_core__rules__remove_comments__test__remove_comments_configure_with_invalid_regex_error.snap
---
source: src/rules/remove_comments.rs
expression: result.unwrap_err().to_string()
---
unexpected value for field 'except': invalid regex provided `^[0-9`
  regex parse error:
    ^[0-9
     ^
error: unclosed character class
